pz3/make_log.txt
make -C /lib/modules/5.15.0-163-generic/build M=/home/drivers/drivers/pz3 modules
make[1]: Entering directory '/usr/src/linux-headers-5.15.0-163-generic'
make[2]: *** No rule to make target '/home/drivers/drivers/pz3/main.o', needed by '/home/drivers/drivers/pz3/main.mod'.  Stop.
make[1]: *** [Makefile:1930: /home/drivers/drivers/pz3] Error 2
make[1]: Leaving directory '/usr/src/linux-headers-5.15.0-163-generic'
make: *** [Makefile:4: all] Error 2
make -C /lib/modules/5.15.0-163-generic/build M=/home/drivers/drivers/pz3 modules
make[1]: Entering directory '/usr/src/linux-headers-5.15.0-163-generic'
  CC [M]  /home/drivers/drivers/pz3/main.o
/home/drivers/drivers/pz3/main.c:6:12: error: static declaration of ‘simple_open’ follows non-static declaration
    6 | static int simple_open(struct inode *inode, struct file *file)
      |            ^~~~~~~~~~~
In file included from /home/drivers/drivers/pz3/main.c:2:
./include/linux/fs.h:3464:12: note: previous declaration of ‘simple_open’ with type ‘int(struct inode *, struct file *)’
 3464 | extern int simple_open(struct inode *inode, struct file *file);
      |            ^~~~~~~~~~~
make[2]: *** [scripts/Makefile.build:297: /home/drivers/drivers/pz3/main.o] Error 1
make[1]: *** [Makefile:1930: /home/drivers/drivers/pz3] Error 2
make[1]: Leaving directory '/usr/src/linux-headers-5.15.0-163-generic'
make: *** [Makefile:4: all] Error 2
make -C /lib/modules/5.15.0-163-generic/build M=/home/drivers/drivers/pz3 modules
make[1]: Entering directory '/usr/src/linux-headers-5.15.0-163-generic'
  CC [M]  /home/drivers/drivers/pz3/main.o
/home/drivers/drivers/pz3/main.c:6:12: error: static declaration of ‘simple_open’ follows non-static declaration
    6 | static int simple_open(struct inode *inode, struct file *file)
      |            ^~~~~~~~~~~
In file included from /home/drivers/drivers/pz3/main.c:2:
./include/linux/fs.h:3464:12: note: previous declaration of ‘simple_open’ with type ‘int(struct inode *, struct file *)’
 3464 | extern int simple_open(struct inode *inode, struct file *file);
      |            ^~~~~~~~~~~
make[2]: *** [scripts/Makefile.build:297: /home/drivers/drivers/pz3/main.o] Error 1
make[1]: *** [Makefile:1930: /home/drivers/drivers/pz3] Error 2
make[1]: Leaving directory '/usr/src/linux-headers-5.15.0-163-generic'
make: *** [Makefile:4: all] Error 2
